2017-12-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Config.pm (remove_source_line): Remove
	  function
	* installcheck/Installcheck/Rest.pm (remove_source_line): Add function
	* installcheck/*.pl: Use remove_source_line for Installcheck::Config

2017-12-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Changer_disk.pl: Fix

2017-12-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c, installcheck/Amanda_Changer_*.pl
	  installcheck/Amanda_Rest_*.pl, installcheck/Amanda_Taper_Scan_*.pl,
	  perl/Amanda/Changer.pm perl/Amanda/Changer/*.pm,
	  perl/Amanda/ScanInventory.pm perl/Amanda/Storage.pm
	  perl/Amanda/Taper/Scan/traditional.pm: Fix Message

2017-12-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Call File::Path::mkpath instead ofi
	  File::Path::make_path

2017-12-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/success-dumper-chunker+dumper-chunker-taper-flush.pl:
	  fix

2017-12-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	All Changer message get their own code and the storage
	* perl/Amanda/Interactivity.pm (new): Get storage_name and changer_name
	  as argument
	* perl/Amanda/ScanInventory.pm (scan): The user_msg_fn function must
	  accept an Amanda::Message as argument
	* perl/Amanda/Changer.pm,
	* perl/Amanda/Changer/aggregate.pm,
	  perl/Amanda/Changer/disk.pm,
	  perl/Amanda/Changer/diskflat.pm,
	  perl/Amanda/Changer/multi.pm,
	  perl/Amanda/Changer/ndmp.pm,
	  perl/Amanda/Changer/rait.pm,
	  perl/Amanda/Changer/robot.pm,
	  perl/Amanda/Changer/single.pm,
	  perl/Amanda/Interactivity.pm,
	  perl/Amanda/Interactivity/email.pm,
	  perl/Amanda/Interactivity/stdin.pm,
	  perl/Amanda/Interactivity/tty.pm,
	  perl/Amanda/Message.pm,
	  perl/Amanda/Recovery/Scan.pm,
	  perl/Amanda/Rest/Amcheck.pm,
	  perl/Amanda/Rest/Storages.pm,
	  perl/Amanda/ScanInventory.pm,
	  perl/Amanda/Storage.pm,